==> GammaTroniques/TICMeter/esp32/main/linky.cpp <==
#include <linky.h>
#include <config.h>
#include <time.h>
#include <gpio.h>
#include <wifi.h>

void Linky::begin()
{
    switch (config.values.linkyMode)
    {
    case AUTO:
        ESP_LOGI(LINKY_TAG, "Trying to autodetect Linky mode, testing last known mode: %s", (mode == MODE_HISTORIQUE) ? "MODE_HISTORIQUE" : "MODE_STANDARD");
        setMode(config.values.linkyMode);
        break;
    case MODE_HISTORIQUE:
        setMode(MODE_HISTORIQUE);
        break;
    case MODE_STANDARD:
        setMode(MODE_STANDARD);
        break;
    default:
        break;
    }
}

void Linky::read()
{
    uart_flush(UART_NUM_1);                                               // clear the UART buffer
    uint32_t timeout = (xTaskGetTickCount() * portTICK_PERIOD_MS) + 5000; // 5 seconds timeout
    memset(buffer, 0, sizeof buffer);                                     // clear the buffer
    rxBytes = 0;

    uint32_t startOfFrame = UINT_MAX; // store the index of the start frame
    uint32_t endOfFrame = UINT_MAX;   // store the index of the end frame

    // debugFrame();
    do
    {
        rxBytes += uart_read_bytes(UART_NUM_1, buffer + rxBytes, (RX_BUF_SIZE - 1) - rxBytes, 500 / portTICK_PERIOD_MS);
        ESP_LOGI(LINKY_TAG, "Read %lu bytes, remaning:%ld", rxBytes, timeout - xTaskGetTickCount() * portTICK_PERIOD_MS);
        //----------------------------------------------------------
        // Firt step: find the start and end of the frame
        //----------------------------------------------------------

        for (int i = 0; i < BUFFER_SIZE; i++) // for each character in the buffer
        {
            if (buffer[i] == START_OF_FRAME) // if the character is a start of frame
            {
                startOfFrame = i; // store the index
            }
            else if (buffer[i] == END_OF_FRAME && i > startOfFrame) // if the character is an end of frame and an start of frame has been found
            {
                endOfFrame = i; // store the index
                break;          // stop the loop
            }
        }
        vTaskDelay(100 / portTICK_PERIOD_MS);
    } while ((endOfFrame == UINT_MAX || startOfFrame == UINT_MAX || (startOfFrame > endOfFrame)) && ((xTaskGetTickCount() * portTICK_PERIOD_MS) < timeout));

    if (endOfFrame == UINT_MAX || startOfFrame == UINT_MAX || (startOfFrame > endOfFrame)) // if a start of frame and an end of frame has been found
    {
        ESP_LOGE(LINKY_TAG, "Error: Frame not found");
        frameSize = 0;
        frame = NULL;
        return;
    }
    else
    {
        ESP_LOGI(LINKY_TAG, "Start of frame: %lu", startOfFrame);
        ESP_LOGI(LINKY_TAG, "End of frame: %lu", endOfFrame);
        frameSize = endOfFrame - startOfFrame;
        frame = buffer + startOfFrame;
    }
    // ESP_LOG_BUFFER_HEXDUMP(LINKY_TAG, buffer, rxBytes, ESP_LOG_INFO);
    // ESP_LOGI(LINKY_TAG, "-------------------");
    ESP_LOGD(LINKY_TAG, "Buffer: %s", buffer);
}

char Linky::decode()
{
    //----------------------------------------------------------
    // Clear the previous data
    //----------------------------------------------------------
    switch (mode)
    {
    case MODE_HISTORIQUE:
        data.hist = {0};
        break;
    case MODE_STANDARD:
        data.std = {0};
        break;
    default:
        break;
    }
    if (!frame)
    {
        if (config.values.linkyMode == AUTO)
        {
            switch (this->mode)
            {
            case MODE_HISTORIQUE:
                if (strlen(data.hist.ADCO) > 0)
                {
                    ESP_LOGI(LINKY_TAG, "Auto mode: Mode Historique Found!");
                    config.values.linkyMode = MODE_HISTORIQUE;
                    config.write();
                }
                else
                {
                    ESP_LOGI(LINKY_TAG, "Auto mode: Mode Historique Not Found! Try Mode Standard");
                    setMode(MODE_STANDARD);
                }
                break;
            case MODE_STANDARD:
                if (strlen(data.std.ADSC) > 0)
                {
                    ESP_LOGI(LINKY_TAG, "Auto mode: Mode Standard Found!");
                    config.values.linkyMode = MODE_STANDARD;
                    config.write();
                }
                else
                {
                    ESP_LOGI(LINKY_TAG, "Auto mode: Mode Standard Not Found! Try Mode Historique");
                    setMode(MODE_HISTORIQUE);
                }
                break;
            default:
                break;
            }
        }
        return 0;
    }
    // ESP_LOG_BUFFER_HEXDUMP(LINKY_TAG, frame, endOfFrame - startOfFrame, ESP_LOG_INFO);
    //-------------------------------------
    // Second step: Find goups of data in the frame
    //-------------------------------------
    unsigned int startOfGroup[GROUP_COUNT] = {UINT_MAX}; // store starts index of each group
    unsigned int endOfGroup[GROUP_COUNT] = {UINT_MAX};   // store ends index of each group
    unsigned int startOfGroupIndex = 0;                  // store the current index of starts of group array
    unsigned int endOfGroupIndex = 0;                    // store the current index of ends of group array
    for (unsigned int i = 0; i < frameSize; i++)         // for each character in the frame
    {
        switch (frame[i])
        {
        case START_OF_GROUP: // if the character is a start of group
            // ESP_LOGI(LINKY_TAG, "START OF GROUP: %u (%x) --> startOfGroupIndex: %u", i, frame[i], startOfGroupIndex);
            startOfGroup[startOfGroupIndex++] = i; // store the index and increment it
            break;                                 //
        case END_OF_GROUP:                         // if the character is a end of group
            // ESP_LOGI(LINKY_TAG, "END OF GROUP: %u (%x) --> endOfGroupIndex: %u", i, frame[i], endOfGroupIndex);
            endOfGroup[endOfGroupIndex++] = i; // store the index and increment it
            break;
        default:
            break;
        }
    }

    if (startOfGroup[0] == UINT_MAX || endOfGroup[0] == UINT_MAX) // if not group found (keep the UINT_MAX value)
    {
        ESP_LOGI(LINKY_TAG, "No group found");
        return 0; // exit the function (no group found)
    }

    if (startOfGroupIndex != endOfGroupIndex) // if the number of starts is not equal to the number of ends: Error
    {
        // error: number of start and end frames are not equal
        ESP_LOGI(LINKY_TAG, "error: number of start and end group are not equal: %d %d", startOfGroupIndex, endOfGroupIndex);
        return 0;
    }

    // for (int i = 0; i < startOfGroupIndex; i++) // for each group
    // {
    //     ESP_LOGI(LINKY_TAG, "Group %d: %d - %d", i, startOfGroup[i], endOfGroup[i]);
    // }

    //------------------------------------------
    // Third step: Find fields in each group
    //------------------------------------------
    for (int i = 0; i < startOfGroupIndex; i++) // for each group
    {
        unsigned int separators[startOfGroupIndex + 1] = {0}; // store index of separators
        uint8_t separatorIndex = 0;                           // store the current index of separators array
        for (int j = startOfGroup[i]; j < endOfGroup[i]; j++) // for each character in group
        {
            if (frame[j] == GROUP_SEPARATOR) // if the character is a separator
            {
                separators[separatorIndex++] = j; // store the index of the separator
            }
        }

        char label[10] = {0};   // store the label as a string
        char value[100] = {0};  // store the data as a string
        char time[15] = {0};    // store the time as a string (H081225223518)
        char checksum[5] = {0}; // store the checksum as a string

        //-----------------------------------------------------------------------------------------------------------------replace to MEMCOPY
        memcpy(label, frame + startOfGroup[i] + 1, separators[0] - startOfGroup[i] - 1); // copy the label from the group
        memcpy(value, frame + separators[0] + 1, separators[1] - separators[0] - 1);     // copy the data from the group
        if (linky.mode == MODE_STANDARD && separatorIndex == 3)                          // if the mode is standard and the number of separators is 3
        {
            memcpy(time, frame + separators[1] + 1, separators[2] - separators[1] - 1);     // copy the time from the group
            memcpy(checksum, frame + separators[2] + 1, endOfGroup[i] - separators[2] - 1); // copy the checksum from the group
        }
        else
        {
            memcpy(checksum, frame + separators[1] + 1, endOfGroup[i] - separators[1] - 1); // copy the checksum from the group
        }
        // ESP_LOGI(LINKY_TAG, "label: %s value: %s checksum: %s", label, value, checksum);

        if (this->checksum(label, value, time) != checksum[0]) // check the checksum with the label, data and time
        {
            // error: checksum is not correct, skip the field
            ESP_LOGI(LINKY_TAG, "ERROR: %s checksum is not correct (%c != %c)", label, this->checksum(label, value, time), checksum[0]);
            continue;
        }
        else
        {
            //------------------------------------------------------------
            // Fourth step: Copy values from each field to the variables
            //------------------------------------------------------------
            for (uint32_t j = 0; j < LinkyLabelListSize; j++)
            {
                if (mode != LinkyLabelList[j].mode)
                    continue;
                if (strcmp(LinkyLabelList[j].label, label) == 0)
                {
                    switch (LinkyLabelList[j].type)
                    {
                    case STRING:
                        strcpy((char *)LinkyLabelList[j].data, value);
                        break;
                    case UINT8:
                        *(uint8_t *)LinkyLabelList[j].data = strtoul(value, NULL, 10);
                        break;
                    case UINT16:
                        *(uint16_t *)LinkyLabelList[j].data = strtoul(value, NULL, 10);
                        break;
                    case UINT32:
                        *(uint32_t *)LinkyLabelList[j].data = strtoul(value, NULL, 10);
                        break;
                    case UINT64:
                        *(uint64_t *)LinkyLabelList[j].data = strtoull(value, NULL, 10);
                        break;
                    case UINT32_TIME:
                    {
                        TimeLabel timeLabel = {0};
                        timeLabel.timestamp = decodeTime(time);
                        timeLabel.value = strtoull(value, NULL, 10);
                        *(TimeLabel *)LinkyLabelList[j].data = timeLabel;
                        break;
                    }
                    default:
                        break;
                    }
                }
            }
        }
    }
    return 1;
}

void Linky::print()
{
    for (uint32_t i = 0; i < LinkyLabelListSize; i++)
    {
        if (mode != LinkyLabelList[i].mode)
            continue;
        switch (LinkyLabelList[i].type)
        {
        case STRING:
            if (strlen((char *)LinkyLabelList[i].data) > 0) // print only if we have a value
                ESP_LOGI(LINKY_TAG, "%s: %s", LinkyLabelList[i].label, (char *)LinkyLabelList[i].data);
            break;
        case UINT8:
            if (*(uint8_t *)LinkyLabelList[i].data != UINT8_MAX) // print only if we have a value
                ESP_LOGI(LINKY_TAG, "%s: %u", LinkyLabelList[i].label, *(uint8_t *)LinkyLabelList[i].data);
            break;
        case UINT16:
            if (*(uint16_t *)LinkyLabelList[i].data != UINT16_MAX) // print only if we have a value
                ESP_LOGI(LINKY_TAG, "%s: %u", LinkyLabelList[i].label, *(uint16_t *)LinkyLabelList[i].data);
            break;
        case UINT32:
            if (*(uint32_t *)LinkyLabelList[i].data != UINT32_MAX) // print only if we have a value
                ESP_LOGI(LINKY_TAG, "%s: %lu", LinkyLabelList[i].label, *(uint32_t *)LinkyLabelList[i].data);
            break;
        case UINT64:
            if (*(uint64_t *)LinkyLabelList[i].data != UINT64_MAX) // print only if we have a value
                ESP_LOGI(LINKY_TAG, "%s: %llu", LinkyLabelList[i].label, *(uint64_t *)LinkyLabelList[i].data);
            break;
        case UINT32_TIME:
        {
            TimeLabel timeLabel = *(TimeLabel *)LinkyLabelList[i].data;
            if (timeLabel.value != 0) // print only if we have a value
            {
                struct tm *timeinfo = localtime(&timeLabel.timestamp);
                char timeString[20];
                strftime(timeString, sizeof(timeString), "%d/%m/%Y %H:%M:%S", timeinfo);
                ESP_LOGI(LINKY_TAG, "%s: %s %lu", LinkyLabelList[i].label, timeString, timeLabel.value);
            }
            break;
        }
        default:
            break;
        }
    }
}
